backend-deploy.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
spec:

  replicas: 1
  selector:
    matchLabels:
      component: backend

  template:
    metadata:
      labels:
        component: backend

    spec:
      containers:
      
        - name: backend
          image: 640037998877.dkr.ecr.ap-southeast-1.amazonaws.com/backend:latest
          ports:
            - containerPort: 5000
