service.yaml
apiVersion: v1

kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    component: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1

kind: Service
metadata:
  name: backend-service
spec:
  selector:
    component: backend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
